Updated resume, removed image place holder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Nairobi</h2>
         </div>
         <div class="col-md-6">
-        <img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="" style="width: 100px; height: 100px; margin-top: 20px;">
+        
 
         </div>
         </div>
@@ -46,7 +46,7 @@
           <h3>About</h3>
         </header>
         <div class="col-md-9">
-        <p>I hold a BSC Actuarial Science Degree from University of Nairobi, Part 1 CPA qualification from KASNEB and two passed SOA papers. I am a self tought developer and currently work as consultant developer for iHub Nairobi. My work at the iHub primarily involves maintaining and building of new services that serve the tech community in Africa. My non-work interests generally revolve around astronomy and physics. If it can be automated, automate it! </p>
+        <p>I hold a BSC Actuarial Science Degree from University of Nairobi, Part 1 CPA qualification from KASNEB and two passed SOA papers. I am a self taught developer and currently work as consultant developer for iHub Nairobi. My work at the iHub primarily involves maintaining and building of new services that serve the tech community in Africa. My non-work interests generally revolve around astronomy and physics. My workflow philosophy, if it can be automated, automate it! </p>
         <strong>Twitter:</strong> <a href="https://twitter.com/jchex">@jchex</a><br />
         <strong>Github:</strong> <a href="https://github.com/prodeveloper">prodeveloper</a><br />
         </div>
