Updated with image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Nairobi</h2>
         </div>
         <div class="col-md-6">
-        
+        <img class="media-object img-circle pull-right" src="http://www.gravatar.com/avatar/203c8720879b9189a9f21837b5553953.jpg" alt="64x64" src="" style="width: 100px; height: 100px; margin-top: 20px;">
 
         </div>
         </div>
@@ -59,7 +59,7 @@
           <div class="skills">
             <h3>iHub</h3>
             <strong>Consultant Software Engineer</strong>
-            <p>2013 - To D</p>
+            <p>2013 - To Date</p>
             <p>Lead development and maintainance of iHub community projects</p>
             <ul>
               <li>Spearheaded development of community portal. http:&#x2F;&#x2F;community.ihub.co.ke&#x2F;login</li>
